<resources>
    <string name="app_name">NYTrip</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1458824011077583</string>
    <string name="Continue">Continue</string>
    <string name="First_name">First name</string>
    <string name="Last_name">Last name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="Teacher_code">Teacher code</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Login_with_your_account">Login with your account</string>
    <string name="Forgot_password">Forgot password?</string>
    <string name="Dont_have_an_account">Don\'t have an account?</string>
    <string name="Register_here">Register here</string>
    <string name="AGREE">AGREE</string>
    <string name="DISAGREE">DISAGREE</string>
    <string name="tasks_complited">Tasks \ncomplited</string>
    <string name="avarage_rating">Average \nrating</string>
    <string name="feedback_received">Feedback \nreceived</string>
    <string name="statistics">STATISTICS</string>
    <string name="overview">OVERVIEW</string>
    <string name="roboto_regular">roboto-regular.ttf</string>
    <string name="push_reminders">Push reminders</string>
    <string name="send_feedback">Send feedback</string>
    <string name="lets_start">LET\'S START</string>
    <string name="get_started">GET STARTED</string>
    <string name="YOUR_TASK">YOUR TASK</string>
    <string name="In_Brooklyn">In Brooklyn you will see your apartment and meet your future roommates for the first time. The bus seems to be the best way to get there. Is it also the fastest?</string>
    <string name="intro_activity">INTRO_ACTIVITY</string>
    <string name="profile_activity">Profile Activity</string>
    <string name="roboto_light">roboto-light.ttf</string>
    <string name="user_activity">Activity</string>
    <string name="dictionary">Dictionary</string>
    <string name="add_more_info">ADD MORE INFO</string>
    <string name="fake_word_description">The smallest element that may be uttered in isolation  with semantic or pragmatic content (with literal or  practical meaning).</string>
    <string name="Choose_your_answer">Choose your answer</string>
    <string name="total_progress">TOTAL PROGRESS</string>
    <string name="voice_recognition_power">Voice recognition power</string>
    <string name="Forgot_password_">Forgot password?</string>
    <string name="password_recovery_massage">To reset password enter your email.</string>
    <string name="SEND">SEND</string>
    <string name="password_recovery">Password recovery</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="NEXT_TASK">NEXT TASK</string>
    <string name="BACK_TO_SCENE">BACK TO\nTHE SCENE</string>
    <string name="TRY_AGAIN">TRY\nAGAIN</string>
    <string name="Task_completed">Task completed!</string>
    <string name="Send_this_task_to_tutor_review">Send this task\nto tutor review</string>
    <string name="check_your_email">Check your email!</string>
    <string name="you_should_receive_email">You should receive an email containing new password.</string>
    <string name="user_token">user token</string>
    <string name="STOP_TO_FINISH_RECORDING">CLICK TO STOP RECORDING</string>
    <string name="sort_by_az">SORT BY A-Z</string>
    <string name="notifications">Notifications</string>
    <string name="feedback">FEEDBACK</string>
    <string name="message">MESSAGE</string>
    <string name="sort_by_this">SORT BY THIS</string>
    <string name="Select_the_rating_mode">Select the rating mode</string>
    <string name="BY_VOICE_RECOGNITION">BY VOICE\n RECOGNITION</string>
    <string name="BY_TUTOR_FEEDBACK">BY TUTOR\n FEEDBACK</string>
    <string name="Try_again_and_improve_this_rate">Try again and improve this rate!</string>
    <string name="SKIP">SKIP</string>
    <string name="has_only">has only</string>
    <string name="Task">Task</string>
    <string name="CLICK_TO_START_RECORD">CLICK TO START</string>
    <string name="audio_message">Audio message</string>
    <string name="TAP_TO_RETRY">TAP TO RETRY</string>
    <string name="Cannot_upload_the_content">Cannot upload the content</string>
    <string name="Excellent">Excellent</string>
    <string name="Good">Good</string>
    <string name="Fairly_good">Fairly Good</string>
    <string name="Okay">Okay</string>
    <string name="Low">Low</string>
    <string name="Insufficient">Insufficient</string>
    <string name="How_we_are_doing">How are we doing?</string>
    <string name="Please_tell_us_what">Please tell us what do you think, any kind of feedback is highly appreciated.</string>
    <string name="Theme">Theme</string>
    <string name="Subject">Subject</string>
</resources>
