<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/bg_account"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        style="@style/ItemAccountCardView"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="6dp">

        <common.views.FontEditView
            android:id="@+id/et_email"
            style="@style/ItemAccountEditView"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            app:fontName="roboto-regular.ttf"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/ItemAccountCardView"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="6dp">

        <common.views.FontEditView
            android:id="@+id/et_passwd"
            style="@style/ItemAccountEditView"
            android:hint="@string/Password"
            android:inputType="textPassword"
            app:fontName="roboto-regular.ttf"/>

    </android.support.v7.widget.CardView>


    <common.views.FontTextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical|right"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical|right"
        android:text="@string/Forgot_password"
        android:textColor="#827f80"
        app:fontName="roboto-regular.ttf"/>


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="6dp">

        <common.views.FontButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_account"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:text="@string/Login"
            android:textColor="@android:color/white"
            app:fontName="roboto-bold.ttf"/>
    </android.support.v7.widget.CardView>

    <common.views.FontTextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical|center"
        android:text="@string/Login_with_your_account"
        android:textColor="#827f80"
        app:fontName="roboto-regular.ttf"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <common.views.FontTextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center"
            android:text="@string/Dont_have_an_account"
            android:textColor="#827f80"
            app:fontName="roboto-regular.ttf"/>

        <common.views.FontTextView
            android:id="@+id/tv_register_here"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="3dp"
            android:clickable="true"
            android:gravity="center_vertical|center"
            android:text="@string/Register_here"
            android:textColor="#827f80"
            android:textSize="14dp"
            android:textStyle="bold"
            app:fontName="roboto-bold.ttf"/>
    </LinearLayout>


</LinearLayout>