<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <common.views.FontTextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="42dp"
        android:text="@string/check_your_email"
        android:textColor="@color/black_89"
        android:textSize="21sp"
        app:fontName="@string/roboto_regular" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@mipmap/oval_149" />

    <common.views.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/you_should_receive_email"
        android:textColor="@color/black_57"
        android:textSize="16sp"
        android:gravity="center"
        app:fontName="@string/roboto_regular" />

</LinearLayout>