<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white">

    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:src="@mipmap/ic_result_mark"/>

    <common.views.FontTextView
        android:id="@+id/tv_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_title"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/Task"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        app:fontName="roboto-light.ttf"/>
    <common.views.FontTextView
        android:id="@+id/tv_taskname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_task"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/Select_the_rating_mode"
        android:textColor="@color/black_87"
        android:textSize="24dp"
        app:fontName="roboto-light.ttf"/>

    <common.views.FontTextView
        android:id="@+id/tv_has_only"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_taskname"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/has_only"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        app:fontName="roboto-light.ttf"/>

    <common.views.FontTextView
        android:id="@+id/tv_mark_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_has_only"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/Select_the_rating_mode"
        android:textColor="@color/pink"
        android:textSize="26dp"
        app:fontName="roboto-light.ttf"/>

    <common.views.FontTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_mark_percent"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/Try_again_and_improve_this_rate"
        android:textColor="@color/blue_87"
        android:textSize="24dp"
        app:fontName="roboto-light.ttf"/>


    <LinearLayout
        android:id="@+id/lt_actions"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/tv_title"
        android:background="#dddddd"
        android:orientation="horizontal"
        android:padding="1px"
        android:weightSum="2">

        <common.views.FontTextView
            android:id="@+id/tv_skip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="1px"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/SKIP"
            android:textColor="@color/black_54"
            android:textSize="18dp"
            app:fontName="roboto-regular.ttf"/>

        <common.views.FontTextView
            android:id="@+id/tv_try_again"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/TRY_AGAIN"
            android:textColor="@color/black_54"
            android:textSize="18dp"
            app:fontName="roboto-regular.ttf"/>
    </LinearLayout>

</RelativeLayout>