<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <common.views.RoundedImageView
        android:id="@+id/teacher_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/ic_fake_scene"
        />

    <common.views.FontTextView
        android:id="@+id/teacher_name"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teacher_image"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:text="Clara"
        android:textColor="@color/black_57"
        android:textSize="14dp"
        app:fontName="@string/roboto_regular"
        />

    <common.views.FontTextView
        android:id="@+id/audio_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_toRightOf="@+id/teacher_name"
        android:text="@string/audio_message"
        android:textColor="@color/black_57"
        app:fontName="@string/roboto_light"
        />

    <ImageView
        android:id="@+id/message_play_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/audio_message"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:background="@mipmap/play_button"

        />

</RelativeLayout>