<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/expandable_toggle_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="21dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="21dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <common.views.FontTextView
            android:id="@+id/dictionary_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Word"
            android:textSize="14sp"
            app:fontName="@string/roboto_regular"
            android:textColor="@color/black_87"
            />

        <common.views.FontTextView
            android:id="@+id/dictionary_word_transcription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="transcription"
            android:textSize="14sp"
            app:fontName="@string/roboto_light"
            android:textColor="@color/black_57"
            />

        <common.views.FontTextView
            android:id="@+id/dictionary_word_translation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="translation"
            android:textSize="14sp"
            app:fontName="@string/roboto_regular"
            android:textColor="@color/black_87"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/expandable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <common.views.FontTextView
            android:id="@+id/dictionary_word_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/fake_word_description"
            android:textColor="@color/black_87"
            android:textSize="11sp"
            app:fontName="@string/roboto_regular" />

        <android.support.v7.widget.CardView
            android:id="@+id/dictionary_add_more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:background="@color/orange_dark"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/add_more_info"
                android:textColor="@color/white"
                android:textSize="11sp" />

        </android.support.v7.widget.CardView>



    </LinearLayout>

</LinearLayout>